@@ -13,10 +13,10 @@
     <parent>
         <groupId>org.terasoluna.gfw</groupId>
         <artifactId>terasoluna-gfw-parent</artifactId>
-        <version>5.5.0.RC7</version>
+        <version>5.5.1.RELEASE</version>
         <relativePath />
     </parent>
-    <version>1.6.0.RELEASE</version>
+    <version>1.6.1.RELEASE</version>
     <name>AIRLINE TICKET RESERVATION SYSTEM Parent POM</name>
     <description>AIRLINE TICKET RESERVATION SYSTEM Parent POM</description>
     <licenses>
@@ -255,6 +255,20 @@
               <version>${thymeleaf-joda-dialect.version}</version>
             </dependency>
             <!-- == End Thymeleaf == -->
+
+            <!-- == Begin For JDK 11 == -->
+            <dependency>
+              <groupId>com.sun.xml.bind</groupId>
+              <artifactId>jaxb-core</artifactId>
+              <version>${jaxb-core.version}</version>
+            </dependency>
+            <dependency>
+              <groupId>com.sun.xml.bind</groupId>
+              <artifactId>jaxb-impl</artifactId>
+              <version>${jaxb-impl.version}</version>
+            </dependency>
+            <!-- == End For JDK 11 == -->
+
         </dependencies>
     </dependencyManagement>
 
@@ -271,11 +285,25 @@
         <com.google.code.maven-license-plugin.version>1.4.0</com.google.code.maven-license-plugin.version>
         <org.codehaus.mojo.version>2.5</org.codehaus.mojo.version>
         <!-- == Dependency Versions == -->
-        <postgresql.version>42.2.4</postgresql.version>
+        <postgresql.version>42.2.5</postgresql.version>
         <thymeleaf-joda-dialect.version>2.0.0</thymeleaf-joda-dialect.version>
+        <jaxb-core.version>2.3.0.1</jaxb-core.version>
+        <jaxb-impl.version>2.3.2</jaxb-impl.version>
         <!-- == Project Properties == -->
         <project.root.basedir>${project.basedir}</project.root.basedir>
         <encoding>UTF-8</encoding>
         <java-version>1.8</java-version>
     </properties>
+    <profiles>
+        <profile>
+          <id>jdk11</id>
+          <activation>
+            <jdk>11</jdk>
+          </activation>
+          <properties>
+            <java-version>11</java-version>
+            <cargo.jvmargs>-Xms512m -Xmx1024m -Djava.locale.providers=COMPAT,CLDR,SPI</cargo.jvmargs>
+          </properties>
+        </profile>
+    </profiles>
 </project>
